# simple_ackermann_gazebo

./: README.md  package.xml  setup.cfg  setup.py
launch/: ackermann_drive_example.launch.py
sys_reqs/: installed_ros2_packages.txt  sys_packages.txt
urdf/: test_ackermann_drive.xacro.urdf
world/: emtpy_export.sdf
