<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_ackermann_gazebo</name>
  <version>0.0.0</version>
  <description>Simple package to launch the ackermann steering ros2 control demo in gazebo with additional sensors and a world.</description>
  <maintainer email="fabian.ulreich@carissma.eu">Fabian Ulreich, C-IAD</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ign_ros2_control_demos</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
